-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0
-
None
-
752fdef48 (15.0)
there is a small inconvenience with "context menu" -> "run" in the project view:
qtcreator builds the project as configured. this means that the target that one is running via "context menu" -> "run" is not necessarily built. most notably, the target is not built when the build targets contain the "Current executable", which is the context menu functionality doesn't seem to change.
this can lead to the case where a stale target is executed, which can be a lovely source of confusion when debugging.
suggestions:
- build executable before running when "run" is selected from the context menu (principle of least surprise, my preferred approach).
- show a dialog to ask the user for input
- switch "current executable" permanently (not sure if it's the best UX)
- switch "current executable" temporarily when triggering the build, switch back to the previous one after the build has started.
- relates to
-
QTCREATORBUG-31416 Setting "Build before deploying" to "Build Only the Application to Be Run" has no effect for CMake projects
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-31386 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 594324,2 | CMakePM: Build the correct executable before running | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |