src/plugins/cmakeprojectmanager/cmakebuildconfiguration.cpp
@@ -1658,16 +1658,18 @@ void CMakeBuildConfiguration::buildTarget(const QString &buildTarget)
         return bs->id() == Constants::CMAKE_BUILD_STEP_ID;
     }));
 
-    QStringList originalBuildTargets;
     if (cmBs) {
-        originalBuildTargets = cmBs->buildTargets();
+        if (m_unrestrictedBuildTargets.isEmpty())
+            m_unrestrictedBuildTargets = cmBs->buildTargets();
         cmBs->setBuildTargets({buildTarget});
     }
 
     BuildManager::buildList(buildSteps());
 
-    if (cmBs)
-        cmBs->setBuildTargets(originalBuildTargets);
+    if (cmBs) {
+        cmBs->setBuildTargets(m_unrestrictedBuildTargets);
+        m_unrestrictedBuildTargets.clear();
+    }
 }
 
 void CMakeBuildConfiguration::reBuildTarget(const QString &cleanTarget, const QString &buildTarget)
@@ -1681,9 +1683,9 @@ void CMakeBuildConfiguration::reBuildTarget(const QString &cleanTarget, const QS
             return bs->id() == Constants::CMAKE_BUILD_STEP_ID;
         }));
 
-    QStringList originalBuildTargets;
     if (cmBs) {
-        originalBuildTargets = cmBs->buildTargets();
+        if (m_unrestrictedBuildTargets.isEmpty())
+            m_unrestrictedBuildTargets = cmBs->buildTargets();
         cmBs->setBuildTargets({buildTarget});
     }
     QString originalCleanTarget;
@@ -1694,8 +1696,10 @@ void CMakeBuildConfiguration::reBuildTarget(const QString &cleanTarget, const QS
 
     BuildManager::buildLists({cleanSteps(), buildSteps()});
 
-    if (cmBs)
-        cmBs->setBuildTargets(originalBuildTargets);
+    if (cmBs) {
+        cmBs->setBuildTargets(m_unrestrictedBuildTargets);
+        m_unrestrictedBuildTargets.clear();
+    }
     if (cmCs)
         cmCs->setBuildTargets({originalCleanTarget});
 }
@@ -2114,6 +2118,11 @@ void CMakeBuildConfiguration::addToEnvironment(Utils::Environment &env) const
 
 void CMakeBuildConfiguration::restrictNextBuild(const ProjectExplorer::RunConfiguration *rc)
 {
+    setRestrictedBuildTarget(rc ? rc->buildKey() : QString());
+}
+
+void CMakeBuildConfiguration::setRestrictedBuildTarget(const QString &buildTarget)
+{
     auto buildStep = qobject_cast<CMakeBuildStep *>(
         findOrDefault(buildSteps()->steps(), [](const BuildStep *bs) {
             return bs->id() == Constants::CMAKE_BUILD_STEP_ID;
@@ -2121,14 +2130,17 @@ void CMakeBuildConfiguration::restrictNextBuild(const ProjectExplorer::RunConfig
     if (!buildStep)
         return;
 
-    if (rc) {
-        m_unrestrictedBuildTargets = buildStep->buildTargets();
-        buildStep->setBuildTargets({rc->buildKey()});
+    if (!buildTarget.isEmpty()) {
+        if (m_unrestrictedBuildTargets.isEmpty())
+            m_unrestrictedBuildTargets = buildStep->buildTargets();
+        buildStep->setBuildTargets({buildTarget});
         return;
     }
 
-    if (!m_unrestrictedBuildTargets.isEmpty())
+    if (!m_unrestrictedBuildTargets.isEmpty()) {
         buildStep->setBuildTargets(m_unrestrictedBuildTargets);
+        m_unrestrictedBuildTargets.clear();
+    }
 }
 
 Environment CMakeBuildConfiguration::configureEnvironment() const
