src/plugins/cmakeprojectmanager/cmakebuildconfiguration.h
@@ -72,6 +72,7 @@ public:
     void addToEnvironment(Utils::Environment &env) const override;
 
     void restrictNextBuild(const ProjectExplorer::RunConfiguration *rc) override;
+    void setRestrictedBuildTarget(const QString &buildTarget);
 
     Utils::Environment configureEnvironment() const;
     Internal::CMakeBuildSystem *cmakeBuildSystem() const;
